# ssh-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.py  main.py  proxy.json.example  proxy_config.example.json  pyproject.toml  ssh_config.example
.github/: copilot-instructions.md
ssh_mcp/: __init__.py  mcp.py  ssh_client.py
ssh_mcp/model/: __init__.py  proxy.py
tests/: test_integration.py  test_mcp.py  test_ssh_client.py
